# guile-hello

./: Makefile.am  README  configure.ac  guix.scm
exe/: say-hello
modules/: Makefile  Makefile.am  Makefile.in
modules/hello/: hello.scm  hello.scm.go
